update pre curso I

--- a/tutoriais/pre_curso/Tutorial_01.Rmd
+++ b/tutoriais/pre_curso/Tutorial_01.Rmd
@@ -357,7 +357,7 @@ R é uma linguagem extremamente flexível quanto ao formato de dados que podem s
 
 Com o pacote *foreign* abriremos arquivos produzidos por outros softwares -- como Stata e SPSS. Podemos também conectar o R a sistemas de gerenciamento de bancos de dados relacionais (SGBD), como o SQL Server. Finalmente, podemos receber via web arquivos em formato XML ou Json e transformá-los em *data frames* em poucos passos.
 
-Vamos começar com o exemplo simples. Baixe os dados com resultados eleitorais (votação nominal por município e zona) do Acre em 2014 disponíveis [aqui](https://raw.githubusercontent.com/thiagomeireles/cebraplab_texto_como_dados_21/master/dados/votacao_candidato_munzona_2014_AC.txt) (clique em "Save link as" e faça o download ou vá [aqui](https://github.com/thiagomeireles/cebraplab_texto_como_dados_21/blob/master/dados/votacao_candidato_munzona_2014_AC.txt) e clique em download). Estes dados são provenientes do [Repositório de Dados Eleitorais](http://www.tse.jus.br/eleicoes/estatisticas/repositorio-de-dados-eleitorais) do TSE. O Tribunal disponibiliza para cada ano eleitoral arquivos por UF em formato de texto (.txt) e numa pasta comprimida em formato .zip.
+Vamos começar com o exemplo simples. Baixe os dados com resultados eleitorais (votação nominal por município e zona) do Acre em 2014 disponíveis [aqui](https://raw.githubusercontent.com/thiagomeireles/cebraplab_captura_2021/main/dados/votacao_candidato_munzona_2014_AC.txt) (clique em "Save link as" e faça o download ou vá [aqui](https://github.com/thiagomeireles/cebraplab_captura_2021/blob/main/dados/votacao_candidato_munzona_2014_AC.txt) e clique em download. Estes dados são provenientes do [Repositório de Dados Eleitorais](http://www.tse.jus.br/eleicoes/estatisticas/repositorio-de-dados-eleitorais) do TSE. O Tribunal disponibiliza para cada ano eleitoral arquivos por UF em formato de texto (.txt) e numa pasta comprimida em formato .zip.
 
 Obs: se você tiver algum problema com o download, encoding, ou outro, pode ir direto ao Repositório e fazer o download de lá.
 
@@ -392,7 +392,7 @@ Outra opção é acessar o arquivo diretamente pelo link do repositório do curs
 
 ```{r}
 votacao_candidato_munzona_2014_AC <- read.table(
-  "https://raw.githubusercontent.com/thiagomeireles/cebraplab_texto_como_dados_21/master/dados/votacao_candidato_munzona_2014_AC.txt",
+  "https://raw.githubusercontent.com/thiagomeireles/cebraplab_captura_2021/main/dados/votacao_candidato_munzona_2014_AC.txt",
   sep = ";",
   fileEncoding="latin1")
 ```
